feat: implement strict TypeScript and ESLint configuration
- Add comprehensive ESLint rules with TypeScript support
- Configure stricter TypeScript compiler options
- Replace all any types with specific interfaces
- Add Prettier for code formatting
- Set up Husky pre-commit hooks with lint-staged
- Fix all existing TypeScript and ESLint errors
- Establish zero-tolerance policy for code quality

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,32 @@
     "incremental": true,
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    // Additional strict checks
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "strictPropertyInitialization": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    // Code quality checks
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "forceConsistentCasingInFileNames": true,
+    "exactOptionalPropertyTypes": true,
+    "target": "ES2017",
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["**/*.ts", "**/*.tsx", "next-env.d.ts", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
