--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "validate": "npm run type-check && npm run lint && npm run format:check",
-    "prepare": "husky"
+    "prepare": "husky",
+    "git:sync": "./scripts/git-sync.sh",
+    "git:review": "git diff --cached --name-only | xargs npm run lint:fix --",
+    "git:quick-sync": "git pull --rebase && npm run validate && git push"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
