feat: pivot to Cloudflare Agents architecture with AI financial intelligence platform
- Updated documentation to reflect new Cloudflare Agents architecture
- Replaced HR platform concept with AI-powered financial intelligence platform
- Added comprehensive agent specifications and MCP integration details
- Created Cloudflare Pages Functions for Gemini API integration
- Implemented employee cost analysis with real AI capabilities
- Added WebSocket support planning for real-time agent communication
- Restructured project tasks around agent implementation phases
- Configured authentication and rate limiting for production readiness
- Excluded functions directory from ESLint (Cloudflare Workers specific)

This represents a major pivot from a simple employee wellness app to an
autonomous AI financial operations platform leveraging cutting-edge
Cloudflare Agent technology and Google Gemini for intelligent cost
analysis and forecasting.

--- a/.env.local.example
+++ b/.env.local.example
@@ -26,3 +26,12 @@ SENTRY_DSN=
 # Analytics (optional)
 NEXT_PUBLIC_POSTHOG_KEY=
 NEXT_PUBLIC_POSTHOG_HOST=
+
+# Google Gemini API
+GOOGLE_GEMINI_API_KEY=your-gemini-api-key
+GOOGLE_GEMINI_MODEL=gemini-2.0-flash-exp-01-18
+
+# Agent Configuration
+ENABLE_AI_AGENTS=true
+AGENT_MAX_ITERATIONS=10
+AGENT_TIMEOUT_MS=30000
