--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "deploy:preview": "npm run build && npx wrangler pages deploy out --project-name=scientia-capital"
   },
   "dependencies": {
+    "@google/genai": "^1.11.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
@@ -48,10 +49,12 @@
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.13",
+    "@cloudflare/workers-types": "^4.20250726.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22",
     "@types/react": "^19",
