--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,27 @@ tmp/
 Thumbs.db
 ehthumbs.db
 Desktop.ini
+
+# Logs
+logs
+*.log
+dev-debug.log
+# Dependency directories
+node_modules/
+# Environment variables
+.env
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+# OS specific
+
+# Task files
+# tasks.json
+# tasks/ 
+.env*.local
+.claude_mcp.json
