--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "type-check": "tsc --noEmit --pretty"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.60.0",
+    "@elevenlabs/elevenlabs-js": "^2.12.2",
     "@hookform/resolvers": "^5.2.1",
     "@neondatabase/serverless": "^1.0.1",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -24,6 +26,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "csv-parse": "^6.1.0",
+    "date-fns": "^4.1.0",
+    "jose": "^6.1.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "react": "19.1.0",
